# FRI-RINS_TurtleBot

./: README.md  ROS_final.yaml~  ROS_newMap_edit2.yaml~  Useful links
devel/: .catkin  .rosinstall  setup.sh
devel/include/costmap_layers/: Wall.h
devel/include/detection_msgs/: Detection.h
devel/include/exercise1/: Greeting.h  Reverse.h  ReverseRequest.h  ReverseResponse.h
devel/include/ferns_detector/: DetectedPoint.h  Detection.h  ModelStatus.h
devel/include/localizer/: Localize.h  LocalizeRequest.h  LocalizeResponse.h
devel/include/zbar_detector/: Marker.h
devel/lib/detection_msgs/: overlay_visualizer  patch_visualizer
devel/lib/dlib_detector/: face_detector  object_detector  object_detector_trainer
devel/lib/exercise1/: client_node  hello_world  publish_custom  publish_string  service_node  subscribe_custom  subscribe_string
devel/lib/exercise2/: pubvel
devel/lib/exercise3/: map_goals
devel/lib/exercise6/: cloud_forwarder  cloud_voxelgrid  find_plane
devel/lib/ferns_detector/: detector  tester  trainer
devel/lib/julius_ros/: recognizer
devel/lib/pcl_demos/: forwarder  voxelgrid
map/: MAP_KONCNA.pgm  MAP_KONCNA.xcf  MAP_KONCNA.yaml
src/exercise1/: CMakeLists.txt
src/exercise2/: CMakeLists.txt
src/exercise4/: CMakeLists.txt  package.xml  setup.py
src/exercise4/launch/: amcl_demo.launch  breadcrumbs.launch~  face_detector_visualizations.launch  localizer_mapper.launch
src/exercise6/: CMakeLists.txt
src/robot_position/: goals_run2.txt  robot_position  robot_position.launch
src/sample_tts/: CMakeLists.txt
(+94 files in other folders)
